--- a/project_notebook.ipynb
+++ b/project_notebook.ipynb
@@ -433,7 +433,7 @@
    "id": "6e0fa92e",
    "metadata": {},
    "source": [
-    "## 2. Exploratory Data Analysis (EDA)"
+    "## Section 2. Exploratory Data Analysis (EDA)"
    ]
   },
   {
@@ -660,6 +660,123 @@
     "- Interest rates display a weaker but positive relationship with transaction volume.\n",
     "\n",
     "- These findings help identify which features may be most relevant for future predictive modeling.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52215c59",
+   "metadata": {},
+   "source": [
+    "## Section 3. Feature Selection and Justification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54227fdd",
+   "metadata": {},
+   "source": [
+    "### 3.1 Choose Features and Target\n",
+    "\n",
+    "Input features: ```cpi_rate```, ```sp500```, ```interest_rate```\n",
+    "\n",
+    "Target feature: ```adjusted_transactions```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2660c405",
+   "metadata": {},
+   "source": [
+    "### 3.2 Define X and Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a92e51f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define X and y using selected features\n",
+    "X = df[['cpi_rate', 'sp500', 'interest_rate']]\n",
+    "y = df['adjusted_transactions']\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f375041e",
+   "metadata": {},
+   "source": [
+    "## Section 4. Train a Regression Model Using Multi-Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2dce885",
+   "metadata": {},
+   "source": [
+    "### 4.1 Train/Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6520297",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 80/20 split for train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=123\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81bdc32a",
+   "metadata": {},
+   "source": [
+    "### 4.2 Create and Train Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b22d6c34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create and train the linear regression model\n",
+    "linreg = LinearRegression()\n",
+    "linreg.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92f6cd75",
+   "metadata": {},
+   "source": [
+    "### 4.3 Predict and Evaluate the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90985dc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make predictions on the test set\n",
+    "y_pred = linreg.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "\n",
+    "print(f\"R² Score: {r2:.4f}\")\n",
+    "print(f\"Mean Absolute Error (MAE): {mae:.2f}\")\n",
+    "print(f\"Root Mean Squared Error (RMSE): {rmse:.2f}\")\n"
    ]
   }
  ],
